--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
     "initialURL": {
-        "url": "https://example.com",
-        "host": "example.com",
+        "url": "https://www.example.com",
+        "host": "www.example..com",
         "port": 443,
         "protocol": "https"
     },
     "webhookurl": null,
     "crawlonly": null,
     "proxyonly": null,
-    "reporttype": "HTML",
+    "reporttype": "XML",
     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3",
     "headers": [],
     "time": 0,
@@ -21,10 +21,8 @@
         "gif",
         "svg"
     ],
-    "exclusions": [
-        "/exclude-this-path",
-        "/another-exclude-path"
-    ],
-    "BurpPath": "BURP.JAR PATH HERE",
-    "jythonPath": "JYTHON.JAR PATH HERE"
+    "exclusions": [],
+    "BurpPath": "/usr/share/burpsuite-pro/burpsuite-pro.jar",
+    "jythonPath": "/opt/jython/jython.jar",
+    "OutputPath": "/output/path/here/"
 }
