updated config to be blank

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "initialURL": {
-        "url": "https://staging.abriska.com",
-        "host": "staging.abriska.com",
+        "url": "",
+        "host": "",
         "port": 443,
         "protocol": "https"
     },
